[gd_scene load_steps=2 format=3 uid="uid://cwmvkv8ik2m70"]

[ext_resource type="Script" uid="uid://cu5rmibhvl3da" path="res://Util/hurtbox.gd" id="1_4kxnd"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_4kxnd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableHurtboxTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisableHurtboxTimer" to="." method="_on_disable_timer_timeout"]
